@@ -11,19 +11,20 @@ Function {} {open
       tooltip {the various index cards test different aspects of the Fl_Tabs widget} xywh {10 10 300 200} selection_color 4 labelcolor 7 resizable
     } {
       Fl_Group {} {
-        label Label1 open selected
+        label Label1 open
         tooltip {this Tab tests correct keyboard navigation between text input fields} xywh {10 30 300 180} selection_color 1 resizable
       } {
         Fl_Input {} {
           label {input:}
-          xywh {60 50 240 40}
+          tooltip {This is the first input field} xywh {60 50 240 40}
         }
         Fl_Input {} {
           label {input2:}
           xywh {60 90 240 30}
+          code0 {o->tooltip("");}
         }
         Fl_Input {} {
-          label {input3:}
+          label {input3:} selected
           xywh {60 120 240 80}
         }
       }
