@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.8
 
+	- Documented tooltip inheritance (STR #1467)
 	- Better event mouse handling fixing detached menus and
 	  sticky tooltips (STR #1463, STR #449)
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
